@@ -497,13 +497,16 @@ ${MementoSectionDone}
 
 !macro MacroAllExtensions _action
   !insertmacro ${_action} ".3gp"
+  !insertmacro ${_action} ".aac"
   !insertmacro ${_action} ".ac3"
   !insertmacro ${_action} ".ape"
   !insertmacro ${_action} ".asf"
   !insertmacro ${_action} ".avi"
+  !insertmacro ${_action} ".bik"
   !insertmacro ${_action} ".bin"
   !insertmacro ${_action} ".dat"
   !insertmacro ${_action} ".divx"
+  !insertmacro ${_action} ".dts"
   !insertmacro ${_action} ".dv"
   !insertmacro ${_action} ".dvr-ms"
   !insertmacro ${_action} ".f4v"
@@ -541,6 +544,7 @@ ${MementoSectionDone}
   !insertmacro ${_action} ".rec"
   !insertmacro ${_action} ".rm"
   !insertmacro ${_action} ".rmvb"
+  !insertmacro ${_action} ".smk"
   !insertmacro ${_action} ".swf"
   !insertmacro ${_action} ".thd"
   !insertmacro ${_action} ".ts"
